package duke.assignment;

public class Student {
    private int id;

    public Student(int id) {
        this.id = id;
    }

    public int getId() {
        return this.id;
    }
}
