@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor UI_COLOR_T4
skinparam classBackgroundColor UI_COLOR

package model.person.student <<Rectangle>>{
class Student
class Homework
class Test
Class "{abstract}\nUiPart" as Assignment
}
Test *--  Student
Test --|> Assignment
Homework --|> Assignment
Homework *-- Student





@enduml
